[package]
name = "motion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
chrono = "0.4.19"
embedded-hal = "0.2.6"
linux-embedded-hal = "0.3.2"
mpu6050 = {path = "../mpu6050-fork"}
nalgebra = { version = "0.24.1", features = ["serde", "serde-serialize"] }
rppal = { version = "0.13.1", features = ["hal"] }
serde = { version = "1.0.136", features = ["serde_derive"] }
terminal = { version = "0.2.1", features = ["crossterm-backend"] }

[features]
